# simple-bash-mcp

./: CHANGELOG.md  DEVELOPMENT.md  KODING.md  README.md  TODO.md  pyproject.toml
docs/: mcp-server-io-isolation-best-practices.md
src/simple_bash_mcp/: config.json  server.py
