[project]
name = "simple-bash-mcp"
version = "0.1.0"
description = "A simple bash MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "mcp>=1.5.0",]
[[project.authors]]
name = "yannbam"
email = "janbam@gmx.de"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
simple-bash-mcp = "simple_bash_mcp:main"
